<resources>
    <string name="app_name" translatable="false">Diary</string>


    <string name="txt_continue">Continue</string>
    <string name="intro1">Record your emotions, thoughts and private moments</string>
    <string name="intro2">Reminder to record diary according to your wishes</string>
    <string name="intro3">Set a password to keep your diary private and safe</string>

    <string name="vietnam">Vietnamese</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="arabic">Arabic</string>
    <string name="bengali">Bengali</string>
    <string name="rusian">Russian</string>
    <string name="potuguese">Portuguese</string>
    <string name="indo">Indonesian</string>
    <string name="german">German</string>
    <string name="itali">Italian</string>
    <string name="korea">Korean</string>
    <string name="language">Language</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="what_do_you_want_us_to_call_you">What do you want us to call you?</string>
    <string name="first_name">Your name...</string>
    <string name="skip">Skip</string>
    <string name="daily_reminder">Daily reminder</string>
    <string name="you_can_change_the_time_latter_in_setting">You can change the time latter in Setting</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="set_passcode">Set passcode</string>
    <string name="create_4_digit_pin_for_your_diary">Create 4-Digit Pin for your Diary</string>
    <string name="confirm_pin">Confirm Pin Code</string>
    <string name="finish_confirm_pin">You need to complete the passcode setting before continuing to the next step!</string>
    <string name="passcode_fail">You need to enter the correct passcode you set earlier</string>
    <string name="set_security_question">Set Security Question</string>
    <string name="select_security_question">Select security question</string>
    <string name="recovery_answer">Recovery Answer</string>
    <string name="question_1">"What is your mother's name?"</string>
    <string name="question_2">"What is your father's name?"</string>
    <string name="question_3">"What is the name of your first school?"</string>
    <string name="question_4">"Where were you born?"</string>
    <string name="question_5">"Which color do you like better, blue or green?"</string>

    <string name="answer">Answer....</string>
    <string name="save">Save</string>
    <string name="how_are_you_feeling_right_now">How are you feeling right now?</string>
    <string name="set_date">Set date</string>
    <string name="cancel">Cancel</string>
    <string name="emotion_1">Furious</string>
    <string name="emotion_2">Terrible</string>
    <string name="emotion_3">Bad</string>
    <string name="emotion_4">Normal</string>
    <string name="emotion_5">Pleased</string>
    <string name="emotion_6">Excellent</string>
    <string name="emotion_7">Amazing</string>
    <string name="title">Title</string>
    <string name="add_to_my_diary">Add to my diary</string>
    <string name="what_s_one_your_mind">What\'s one your mind....</string>
    <string name="notitle">No title</string>

    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="choose_image">Choose image</string>
    <string name="delete_img">Delete Image?</string>
    <string name="no_cancel">No, cancel</string>
    <string name="yes_delete">Yes, delete</string>
    <string name="hello">Hello,</string>
    <string name="hello_noname">Hello, No name</string>
    <string name="enter_your_passcode">Enter your passcode</string>
    <string name="you_need_to_enter_the_passcode_to_continue_using_the_application">You need to enter the passcode to continue using the application</string>
    <string name="forgot_your_password_recover_now">Forgot your password? Recover now!</string>

    <string name="error_pass">Error Passcode\n</string>
    <string name="schedule">Schedule</string>
    <string name="create_schedule">Create Schedule</string>
    <string name="content">Content</string>
    <string name="reminder">Reminder</string>
    <string name="nocontent">No content</string>
    <string name="status">Status</string>
    <string name="mood_flow">Mood Flow</string>
    <string name="mood_trends">Mood Trends</string>
    <string name="setting">Setting</string>
    <string name="personal">Personal</string>
    <string name="theme">Theme</string>
    <string name="password_pin">Password (PIN)</string>
    <string name="other">Others</string>
    <string name="choose_your_diary_theme">Choose Your Diary Theme</string>
    <string name="noname">No name</string>
    <string name="enable_reminder">Enable reminder</string>
    <string name="set_time">Set time</string>
    <string name="repeat_reminder">Repeat reminder</string>
    <string name="do_not_repeat">Do not repeat</string>
    <string name="every_day">Everyday</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="delete_schedule">Delete schedule?</string>
    <string name="edit_schedule">Edit Schedule</string>
    <string name="confirm">Confirm</string>
    <string name="delete_diary_content">Are you sure to delete this diary? This action will make it lost forever.</string>
    <string name="delete_diary">Delete Diary</string>
    <string name="edit_diary">Edit Diary</string>
    <string name="daily_reminder_content">It\'s time to write a diary</string>
    <string name="newest_first">Newest first</string>
    <string name="oldest_first">Oldest first</string>
    <string name="enable_diary_lock">Enable diary lock</string>
    <string name="set_diary_lock">Set Diary Lock</string>
    <string name="change_passcode">Change passcode</string>
    <string name="enter_your_new_passcode">Enter new Passcode</string>
    <string name="your_passcode_changde">Your password has been changed!</string>
    <string name="change_sercurity">Security questions and answers have been changed!</string>
    <string name="change_sercurity_error">The answer cannot be left blank!</string>
    <string name="get_passcode_again">Password retrieval</string>
    <string name="error_ques">Your security question or answer is wrong. Remember carefully!</string>
</resources>