<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_radius_24"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:text="@string/delete_img"
            android:textAllCaps="true"
            android:textColor="#383655"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_regular"
            android:gravity="center"
            android:text="@string/delete_diary_content"
            android:textColor="#383655"
            android:textSize="16sp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_regular"
                android:gravity="center"
                android:text="@string/no_cancel"
                android:textColor="#636372"
                android:textSize="16sp" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="#A3A3A3" />

            <TextView
                android:id="@+id/btn_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_regular"
                android:gravity="center"
                android:text="@string/yes_delete"
                android:textColor="#B94434"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>