<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#FAF5F0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NameActivity">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_back"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_s_your_name"
            android:fontFamily="@font/nunito_semibold"
            android:textSize="24sp"
            android:gravity="center"
            android:textColor="#766DE6"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_do_you_want_us_to_call_you"
            android:fontFamily="@font/nunito_regular"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:textColor="#383655"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_username"
            android:hint="@string/first_name"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginTop="64dp"
            android:layout_marginHorizontal="12dp"
            android:textColorHint="#636372"
            android:background="@null"
            android:fontFamily="@font/nunito_regular"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:layout_width="00dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn_skip"
            android:background="@drawable/bg_btn_border100"
            android:padding="16dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            android:text="@string/skip"
            android:textColor="#383655"
            android:textSize="16sp"
            android:fontFamily="@font/nunito_semibold"
            android:elevation="2dp"
            android:shadowColor="#33000000"
            />
        <TextView
            android:layout_width="00dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn_continue"
            android:background="@drawable/bg_btn_border100"
            android:backgroundTint="#766DE6"
            android:padding="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/txt_continue"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/nunito_semibold"
            android:elevation="2dp"
            android:shadowColor="#33000000"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>