<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#FAF5F0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SecurityQuestionActivity">


    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:adjustViewBounds="true"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#383655"
            android:fontFamily="@font/nunito_bold"
            android:textSize="20sp"
            android:id="@+id/tv_title"
            android:layout_marginStart="16dp"
            android:layout_toRightOf="@+id/btn_back"
            android:text="@string/set_security_question"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/rl_title"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_security_question"
            android:fontFamily="@font/nunito_bold"
            android:textSize="14sp"
            android:textColor="#2D274F"
            />

        <Spinner
            android:id="@+id/spv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="30dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recovery_answer"
            android:fontFamily="@font/nunito_bold"
            android:textSize="14sp"
            android:layout_marginTop="40dp"
            android:textColor="#2D274F"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_answer"
            android:hint="@string/answer"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="16dp"
            android:textColorHint="#636372"
            android:background="@null"
            android:fontFamily="@font/nunito_regular"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn_save"
            android:background="@drawable/bg_btn_border100"
            android:padding="16dp"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            android:text="@string/save"
            android:textColor="#383655"
            android:textSize="16sp"
            android:fontFamily="@font/nunito_semibold"
            android:elevation="2dp"
            android:shadowColor="#33000000"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>