<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_radius_24"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="What do we call you?"
            android:textColor="#383655"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="24dp"
            android:background="@null"
            android:fontFamily="@font/nunito_regular"
            android:hint="@string/first_name"
            android:textColor="@color/black"
            android:textColorHint="#636372"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_regular"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="#636372"
                android:textSize="16sp" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="#A3A3A3" />

            <TextView
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_regular"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="#766DE6"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>