<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_radius_24"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:id="@+id/title"
            android:text="@string/create_schedule"
            android:textAllCaps="true"
            android:textColor="#383655"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_medium"
            android:hint="@string/title"
            android:textColor="#383655"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_medium"
            android:hint="@string/content"
            android:textColor="#383655"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/nb_hour"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/bg_border_line_radius_8"
                app:np_itemSpacing="10dp"
                app:np_max="12"
                app:np_min="0"
                app:np_order="descending"
                app:np_selectedTextColor="#383655"
                app:np_selectedTextUnderline="false"
                app:np_textColor="#99383655"
                app:np_textSize="16sp"
                app:np_value="6"
                app:np_wheelItemCount="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="-2dp"
                android:fontFamily="@font/nunito_medium"
                android:text=":"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/nb_minute"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_border_line_radius_8"
                app:np_itemSpacing="10dp"
                app:np_max="59"
                app:np_min="0"
                app:np_order="descending"
                app:np_selectedTextColor="#383655"
                app:np_selectedTextUnderline="false"
                app:np_textColor="#99383655"
                app:np_textSize="16sp"
                app:np_value="10"
                app:np_wheelItemCount="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="54dp"
                android:layout_gravity="center"
                android:layout_marginLeft="6dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/btn_am"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_radius_4"
                    android:backgroundTint="#766DE6"
                    android:fontFamily="@font/nunito_regular"
                    android:gravity="center"
                    android:paddingHorizontal="12dp"
                    android:text="@string/am"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/btn_pm"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_radius_4"
                    android:backgroundTint="#766DE6"
                    android:fontFamily="@font/nunito_regular"
                    android:gravity="center"
                    android:paddingHorizontal="12dp"
                    android:text="@string/pm"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/nunito_regular"
                android:gravity="center"
                android:text="@string/reminder"
                android:textColor="#383655"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/sw_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_regular"
                android:gravity="center"
                android:text="@string/no_cancel"
                android:textColor="#636372"
                android:textSize="16sp" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="#A3A3A3" />

            <TextView
                android:id="@+id/btn_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_regular"
                android:gravity="center"
                android:text="@string/create_schedule"
                android:textColor="#B94434"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
